--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':SlidingMenulibrary'
+include ':app', ':SlidingMenulibrary', ':toucheventapp'
 include ':Indicatorlibrary'
 include ':indictorsample'
