1. 新闻内容设置     1.1 字体大小设置     1.2 字体属性保存 2. 第三方社会化分享(使用 mob) 3. 组图的不同格式切换

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.mob.sdk'
 
 android {
     compileSdkVersion 26
@@ -18,7 +19,40 @@ android {
         }
     }
 }
+MobSDK {
+    appKey "24c3a269537ea"
+    appSecret "0136d3b0132356971520d07e7f2f5818"
 
+    ShareSDK {
+        //平台配置信息
+        // 不需要添加 OnekeyShare 库
+        // gui false
+        // 固定使用这个版本
+        // version "v3.1.3"
+        devInfo {
+            SinaWeibo {
+                appKey "568898243"
+                appSecret "38a4f8204cc784f81f9f0daaf31e02e3"
+                callbackUri "http://www.sharesdk.cn"
+                shareByAppClient false
+            }
+            Wechat {
+                appId "wx4868b35061f87885"
+                appSecret "64020361b8ec4c99936c0e3999a9f249"
+            }
+            QQ {
+                appId "100371282"
+                appKey "aed9b0303e3ed1e27bae87c33761161d"
+            }
+/*            Facebook {
+                appKey "1412473428822331"
+                appSecret "a42f4f3f867dc947b9ed6020c2e93558"
+                callbackUri "https://mob.com"
+            }*/
+        }
+    }
+
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
