--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':SlidingMenulibrary', ':toucheventapp', ':JPushExample(884716)', ':notificationdemo'
+include ':app', ':SlidingMenulibrary', ':toucheventapp', ':JPushExample(884716)', ':notificationdemo', ':screenadapterapp'
 include ':Indicatorlibrary'
 include ':indictorsample'
